@@ -7,6 +7,7 @@ import org.mapstruct.Mapper;
 import org.mapstruct.factory.Mappers;
 
 import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Mapper
@@ -14,6 +15,7 @@ public interface GraphMapper {
 
     GraphMapper INSTANCE = Mappers.getMapper(GraphMapper.class);
 
+    @Deprecated
     default GraphDTO toDTO(Graph graph) {
         Map<NodeDTO, List<NodeDTO>> adjList = new HashMap<>();
 
@@ -27,7 +29,8 @@ public interface GraphMapper {
                     .sorted(Comparator.comparingInt(GraphPathElement::getOrd))
                     .map(GraphPathElement::getNode)
                     .map(NodeMapper.INSTANCE::toDTO)
-                    .toList();
+                    .collect(Collectors.toList());
+
 
             adjList.put(n, nList);
         }
@@ -35,6 +38,13 @@ public interface GraphMapper {
         return new GraphDTO(adjList);
     }
 
+    default GraphDTO toDTO(GraphV2 graph) {
+        // toDo: implement this
+
+        return null;
+    }
+
+    @Deprecated
     default Graph fromDTO(GraphDTO graphDTO) {
         Graph graph = new Graph();
 
@@ -64,5 +74,11 @@ public interface GraphMapper {
         graph.setGraphPath(graphPaths);
 
         return graph;
+    }
+
+    default GraphV2 fromDTOV2(GraphDTO graphDTO) {
+        //toDo: implement this
+
+        return null;
     }
 }
